Updated by task 'AUTO_TM_MT_1759419477461' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/291e3f6b19c52b0902fe555c78adeadece6096a9

--- a/help/implementing/cloud-manager/release-notes/2020/2020-8-0.md
+++ b/help/implementing/cloud-manager/release-notes/2020/2020-8-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione 2020.8.0 di Cloud Manager in AEM as a Cloud Ser
 feature: Release Information
 exl-id: 70674e16-f9ba-4777-98fe-34161e90a481
 role: Admin
-source-git-commit: 41a67b0747ed665291631de4faa7fb7bb50aa9b9
+source-git-commit: 5f9d53958076b77cd333a042003c83853594db87
 workflow-type: tm+mt
-source-wordcount: '423'
-ht-degree: 64%
+source-wordcount: '422'
+ht-degree: 60%
 
 ---
 
@@ -21,13 +21,13 @@ La data di pubblicazione di Cloud Manager in AEM as a Cloud Service 2020.8.0 è 
 
 ## Novità {#whats-new-cloud-manager}
 
-* Audit del contenuto è una funzione abilitata nelle pipeline di produzione di Cloud Manager Sites. Ora la configurazione della pipeline di produzione per i programmi con Sites include una terza scheda denominata **Audit del contenuto**. Ogni volta che viene eseguita una pipeline di produzione, un nuovo passaggio di audit del contenuto segue test funzionali personalizzati. Questo passaggio valuta il sito in diverse dimensioni, tra cui prestazioni, SEO (Search Engine Optimization), accessibilità, best practice e conformità PWA (app web progressiva).
+* Audit del contenuto è una funzione abilitata nelle pipeline di produzione di Cloud Manager Sites. Ora la configurazione della pipeline di produzione per i programmi con Sites include una terza scheda denominata **Audit del contenuto**. Ogni volta che viene eseguita una pipeline di produzione, un nuovo passaggio di audit del contenuto segue test funzionali personalizzati. Questo passaggio valuta il sito in diverse dimensioni, tra cui prestazioni, SEO (Search Engine Optimization), accessibilità, best practice e conformità di PWA (app web progressiva).
 
 
   >[!NOTE]
   >Audit del contenuto è stato successivamente rinominato in Audit dell’esperienza.
 
-  Per ulteriori informazioni, consulta [Test di audit dell’esperienza](/help/implementing/cloud-manager/experience-audit-dashboard.md).
+  Per ulteriori informazioni, consulta [Test di audit dell’esperienza](/help/implementing/cloud-manager/reports/report-experience-audit.md).
 
 * Gli ambienti creati di recente nei programmi Assets ora vengono configurati automaticamente con Smart Content Services.
 
