--- a/help/implementing/cloud-manager/release-notes/2024/2024-6-0.md
+++ b/help/implementing/cloud-manager/release-notes/2024/2024-6-0.md
@@ -4,7 +4,7 @@ description: Note sulla versione 2024.6.0 di Cloud Manager in AEM as a Cloud Ser
 feature: Release Information
 role: Admin
 exl-id: a39b3322-094c-4480-a5f0-35007fc1a194
-source-git-commit: 169de7971fba829b0d43e64d50a356439b6e57ca
+source-git-commit: 2aea79d42ef9627a8fc758077a7ee012592888d7
 workflow-type: tm+mt
 source-wordcount: '530'
 ht-degree: 55%
@@ -32,7 +32,7 @@ La data di pubblicazione di Cloud Manager versione 2024.6.0 in AEM as a Cloud Se
 * [Nuove regole OakPal](/help/implementing/cloud-manager/custom-code-quality-rules.md#oakpal-ui-content-package) aggiunte all&#39;analisi di qualità del codice Cloud Manager. Ogni nuova regola aggiunta a partire da giugno 2024 è una modifica continua.
 Ti invitiamo a risolvere queste regole il prima possibile perché possono causare un errore nelle pipeline a partire dalla versione di agosto 2024 di Cloud Manager.
 
-## Programma beta privato {#private-beta-program}
+## Programma Beta privato {#private-beta-program}
 
 Per testare alcune delle prossime funzionalità, partecipa al programma beta privato di Adobe.
 
@@ -50,9 +50,9 @@ Con Cloud Manager, puoi [generare e gestire autonomamente i certificati SSL conv
 
 Se ti interessa testare questa nuova funzionalità e condividere il feedback, invia un’e-mail a `Grp-aemcs-dv-dert-adopter@adobe.com` dall’indirizzo e-mail associato al tuo Adobe ID.
 
-### Dashboard di Experience Audit {#experience-audit-dashboard}
+### Dashboard di audit dell’esperienza {#experience-audit-dashboard}
 
-La [dashboard di Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/experience-audit-dashboard.md) include una vista dei trend dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
+La [dashboard Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/reports/report-experience-audit.md) include una vista con le tendenze dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
 
 La dashboard sfrutta Google Lighthouse, uno strumento open-source automatizzato per migliorare la qualità delle app web. Puoi eseguirla su qualsiasi pagina web pubblica o che richiede l’autenticazione. Sono disponibili audit di prestazioni, accessibilità, applicazioni web progressive, SEO e altro ancora.
 
