--- a/help/implementing/cloud-manager/release-notes/2024/2024-7-0.md
+++ b/help/implementing/cloud-manager/release-notes/2024/2024-7-0.md
@@ -4,7 +4,7 @@ description: Note sulla versione 2024.7.0 di Cloud Manager in AEM as a Cloud Ser
 feature: Release Information
 exl-id: 9c73d7ab-c2c2-4803-a07b-e9054220c6b2
 role: Admin
-source-git-commit: 169de7971fba829b0d43e64d50a356439b6e57ca
+source-git-commit: 2aea79d42ef9627a8fc758077a7ee012592888d7
 workflow-type: tm+mt
 source-wordcount: '621'
 ht-degree: 70%
@@ -30,7 +30,7 @@ La data di pubblicazione di Cloud Manager versione 2024.7.0 in AEM as a Cloud Se
 * Quando si aggiunge un [certificato DV gestito da Adobe](/help/implementing/cloud-manager/managing-ssl-certifications/add-ssl-certificate.md), è ora possibile aggiungere un singolo certificato che copre più domini anziché creare un certificato per ciascun dominio.
 * È ora possibile aggiungere a un programma soluzioni che non dispongono di [ulteriori aree geografiche di pubblicazione](/help/operations/additional-publish-regions.md), purché il programma disponga di almeno una soluzione Sites o Forms applicabile.
 * È ora possibile aggiungere a un programma soluzioni che non dispongono del [99,99% SLA](/help/implementing/cloud-manager/getting-access-to-aem-in-cloud/creating-production-programs.md#sla), purché il programma disponga di almeno una soluzione Sites o Forms applicabile.
-* La [dashboard dell’audit dell’esperienza](/help/implementing/cloud-manager/experience-audit-dashboard.md) è stato migliorata in diversi modi.
+* La [dashboard dell’audit dell’esperienza](/help/implementing/cloud-manager/reports/report-experience-audit.md) è stato migliorata in diversi modi.
    * Gli audit ora vengono eseguiti su endpoint `.com` tramite CDN, sostituendo il precedente approccio `.net`.
       * Questa modifica simula in modo più accurato le esperienze degli utenti reali e consente di prendere decisioni più informate sulla gestione e l’ottimizzazione del sito web.
    * Sono stati apportati diversi miglioramenti all’interfaccia utente dell’audit dell’esperienza, tra cui:
@@ -40,7 +40,7 @@ La data di pubblicazione di Cloud Manager versione 2024.7.0 in AEM as a Cloud Se
    * La metrica PWA è stata rimossa in conformità alla versione 12.0.0 di Lighthouse, che l’ha eliminata.
 * L’[Archetipo di progetto AEM](https://experienceleague.adobe.com/it/docs/experience-manager-core-components/using/developing/archetype/overview) è stato aggiornato alla [versione 49](https://github.com/adobe/aem-project-archetype/tree/aem-project-archetype-49).
 
-## Programma beta privato {#private-beta-program}
+## Programma Beta privato {#private-beta-program}
 
 Per testare alcune delle prossime funzionalità, partecipa al programma beta privato di Adobe.
 
@@ -58,9 +58,9 @@ Cloud Manager ora consente di [generare e gestire autonomamente i certificati SS
 
 Se ti interessa testare questa nuova funzionalità e condividere il feedback, invia un’e-mail a `Grp-aemcs-dv-dert-adopter@adobe.com` dall’indirizzo e-mail associato al tuo Adobe ID.
 
-### Dashboard di Experience Audit {#experience-audit-dashboard}
+### Dashboard di audit dell’esperienza {#experience-audit-dashboard}
 
-La [dashboard di Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/experience-audit-dashboard.md) include una vista dei trend dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
+La [dashboard Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/reports/report-experience-audit.md) include una vista con le tendenze dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
 
 La dashboard sfrutta Google Lighthouse, uno strumento open-source automatizzato per migliorare la qualità delle app web. Puoi eseguirla su qualsiasi pagina web pubblica o che richiede l’autenticazione. Sono disponibili audit di prestazioni, accessibilità, applicazioni web progressive, SEO e altro ancora.
 
