--- a/help/implementing/cloud-manager/release-notes/2024/2024-8-0.md
+++ b/help/implementing/cloud-manager/release-notes/2024/2024-8-0.md
@@ -4,10 +4,10 @@ description: Ulteriori informazioni sulle note sulla versione 2024.7.0 di Cloud 
 feature: Release Information
 role: Admin
 exl-id: ad673f82-8c4a-4904-9007-273273b82fba
-source-git-commit: 169de7971fba829b0d43e64d50a356439b6e57ca
+source-git-commit: 2aea79d42ef9627a8fc758077a7ee012592888d7
 workflow-type: tm+mt
 source-wordcount: '454'
-ht-degree: 90%
+ht-degree: 91%
 
 ---
 
@@ -28,7 +28,7 @@ La data di pubblicazione di Cloud Manager versione 2024.8.0 in AEM as a Cloud Se
 * [Ulteriori aree geografiche di pubblicazione](/help/operations/additional-publish-regions.md) e un [Accordo sul livello di servizio al 99,99%](/help/implementing/cloud-manager/getting-access-to-aem-in-cloud/creating-production-programs.md#sla) sono ora disponibili per AEM Forms as a Cloud Service.
    * Questo miglioramento consente di ottenere Accordi sul livello di servizio superiori con tempi di attività più lunghi e latenza più bassa, garantendo esperienze all’avanguardia per gli utenti distribuiti a livello globale.
 
-## Programma beta privato {#private-beta-program}
+## Programma Beta privato {#private-beta-program}
 
 Per testare alcune delle prossime funzionalità, partecipa al programma beta privato di Adobe.
 
@@ -46,9 +46,9 @@ Cloud Manager ora consente di: [generare e gestire certificati SSL convalidati d
 
 Se ti interessa testare questa nuova funzionalità e condividere il feedback, invia un’e-mail a `Grp-aemcs-dv-dert-adopter@adobe.com` dall’indirizzo e-mail associato al tuo Adobe ID.
 
-### Dashboard di Experience Audit {#experience-audit-dashboard}
+### Dashboard di audit dell’esperienza {#experience-audit-dashboard}
 
-La [dashboard di Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/experience-audit-dashboard.md) include una vista dei trend dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
+La [dashboard Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/reports/report-experience-audit.md) include una vista con le tendenze dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
 
 La dashboard sfrutta Google Lighthouse, uno strumento open-source automatizzato per migliorare la qualità delle app web. Puoi utilizzarla per controllare qualsiasi pagina web pubblica o che richiede l’autenticazione. Sono disponibili valutazioni di prestazioni, accessibilità, applicazioni web progressive, SEO e altro ancora.
 
