--- a/help/implementing/cloud-manager/release-notes/2025/2025-9-0.md
+++ b/help/implementing/cloud-manager/release-notes/2025/2025-9-0.md
@@ -1,78 +1,44 @@
 ---
-title: Note sulla versione 2025.10.0 di Cloud Manager
-description: Scopri la versione 2025.10.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
+title: Note sulla versione 2025.9.0 di Cloud Manager
+description: Scopri la versione 2025.9.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
 feature: Release Information
 role: Admin
-exl-id: 24d9fc6f-462d-417b-a728-c18157b23bbe
-source-git-commit: d33db0bf364e1177d650e779b1600c7126ec6ff1
+source-git-commit: 4767e93b3029f2617446f337add5f86a41dc998e
 workflow-type: tm+mt
-source-wordcount: '1286'
-ht-degree: 64%
+source-wordcount: '1138'
+ht-degree: 100%
 
 ---
 
-# Note sulla versione 2025.10.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
+# Note sulla versione 2025.9.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
 
 <!-- https://wiki.corp.adobe.com/display/DMSArchitecture/%5BKT%5D+Cloud+Manager+2025.08.0+Release -->
 
-Scopri la versione 2025.10.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
+Scopri la versione 2025.9.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
 
 Consulta anche le [note sulla versione corrente di Adobe Experience Manager as a Cloud Service](/help/release-notes/release-notes-cloud/release-notes-current.md).
 
 ## Date di pubblicazione {#release-date}
 
-La versione 2025.10.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata il venerdì 2 ottobre 2025.
+La versione 2025.9.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata il 4 settembre 2025.
 
-La prossima versione è pianificata per il venerdì 6 novembre 2025.
+La prossima versione è pianificata per il 2 ottobre 2025.
 
 ## Novità {#what-is-new}
 
-* **Servizio di valutazione dell&#39;integrità cloud di AEM**
+* **Rinnovare manualmente i certificati di convalida del dominio gestiti da Adobe**
 
-  Adobe presenta AEM Cloud Health Assessment Service, uno strumento di controllo automatizzato e non invasivo che mantiene l’ambiente AEM as a Cloud Service ottimizzato, sicuro e allineato con le best practice.
+  Ora puoi rinnovare manualmente i certificati di convalida del dominio (DV) gestiti da Adobe da Cloud Manager o dall’API pubblica, per aggiornare i certificati in modo proattivo. <!-- CMGR-68738 -->
 
-  Questo servizio esegue le seguenti operazioni:
+  ![Rinnovo certificato SSL](/help/implementing/cloud-manager/release-notes/assets/ssl-certificate-adobedv-renew.png)
 
-   * Esegue la scansione degli ambienti per individuare colli di bottiglia delle prestazioni, inefficienze e rischi potenziali.
-   * Analizza le strutture dei contenuti (blueprint, Live Copy) e le configurazioni personalizzate.
-   * Identifica le dipendenze obsolete (AEM SDK, librerie di terze parti).
-   * Segnala i problemi di qualità del codice (annotazioni non corrette, modelli inefficienti).
-   * Fornisce indicazioni actionable tramite dashboard come **Centro operativo**.
-   * Supporta l’ottimizzazione proattiva tramite il rilevamento e la risoluzione tempestivi dei problemi.
+* **Ora è stato aggiunto il supporto per Azure DevOps (archivi privati)**
 
-  I team possono monitorare e migliorare continuamente gli ambienti AEM per garantire prestazioni più fluide, maggiore sicurezza e manutenibilità a lungo termine.
+  Gli aggiornamenti della documentazione includono passaggi di configurazione per integrare un Git personalizzato con Azure DevOps e la convalida delle richieste di pull. Consulta [Aggiungere archivi esterni in Cloud Manager](/help/implementing/cloud-manager/managing-code/external-repositories.md).
 
-  Consulta [Valutazione dello stato per gli ambienti di produzione e staging](/help/implementing/cloud-manager/reports/report-health-assessment.md).
+* **Estensione del supporto Git personalizzato (BYOG) alle pipeline di configurazione (archivi privati)**
 
-* **Supporto pipeline di configurazione**
-
-  Le pipeline di configurazione sono ora supportate per i siti creati con Edge Delivery Services, espandendo questa funzionalità oltre i singoli ambienti di Cloud Service. È possibile utilizzare le **pipeline di configurazione** per gestire impostazioni quali le regole di filtro del traffico e le configurazioni del firewall per applicazioni web (WAF), se applicabile. Consulta le [configurazioni supportate](/help/operations/config-pipeline.md#configurations).
-
-  Le pipeline di configurazione di Edge Delivery supportano anche i segreti tramite le variabili della pipeline di Cloud Manager.
-
-  Consulta [Aggiungere pipeline Edge Delivery](/help/implementing/cloud-manager/configuring-pipelines/configuring-edge-delivery-pipeline.md).
-
-* **Finestra di dialogo di configurazione di Domain Mapping-CDN semplificata**
-
-  Cloud Manager ha semplificato il flusso **Mappa dominio su CDN** per ridurre confusione e velocizzare la configurazione. La finestra di dialogo ora enfatizza **CDN gestita da Adobe** (con un badge &quot;Consigliato&quot;).
-
-  ![Finestra di dialogo Mappa dominio su rete CDN con il pulsante di opzione CDN gestita da Adobe selezionato](/help/implementing/cloud-manager/assets/cdn/map-domain-to-cdn-dialog-box-adobe-managed-cdn.png).
-
-  Vedere [Aggiungere un mapping di dominio](/help/implementing/cloud-manager/domain-mappings/add-domain-mapping.md).
-
-  La finestra di dialogo presenta anche un elenco di controllo singolo e conciso per la scheda **Altro provider CDN**, incentrato sul contenuto informativo con i seguenti elementi:
-
-   * Puntare l&#39;origine CDN a `publish-p<PROGRAM_ID>-e<ENV_ID>.adobeaemcloud.com`.
-   * Imposta **Host/SNI** per inoltrare l&#39;host originale.
-   * Aggiungi `X-AEM-Edge-Key` (dopo la distribuzione della chiave in Cloud Manager).
-   * Imposta `X-Forwarded-Host` sul tuo dominio rivolto al cliente.
-   * Cancella altre intestazioni `X-Forwarded-*` prima di raggiungere AEM.
-
-  ![Finestra di dialogo Mappa dominio su rete CDN con il pulsante di scelta Altro provider CDN selezionato](/help/implementing/cloud-manager/assets/cdn/map-domain-to-cdn-dialog-box-other-cdn-provider.png)
-
-  <!-- (no redundant `Origin` field or "Learn more" clutter) -->Il piè di pagina allegato fornisce due collegamenti utili: configurazioni di esempio per le CDN principali e un collegamento alla documentazione completa. Un singolo pulsante di conferma-Ho configurato la rete CDN-completa il flusso.
-
-  Vedi [CDN in AEM as a Cloud Service](/help/implementing/dispatcher/cdn.md#point-to-point-CDN).
+  Cloud Manager ora supporta le pipeline di configurazione con archivi privati su GitHub, Bitbucket, Azure DevOps e GitLab. Questo supporto accelera ulteriormente il ciclo di sviluppo. Consulta [Controlli della richiesta di pull per archivi privati](/help/implementing/cloud-manager/managing-code/github-check-config.md).
 
 <!--
 ### Staging-Only and Production-Only Pipelines {#staging-production-only-pipelines}
@@ -91,26 +57,6 @@ Sono attualmente disponibili le seguenti opportunità:
 ### Support for Custom Author Domains in Cloud Service
 
 AEM Cloud Service is going to soon support one custom domain per Author environment.-->
-
-### Estensibilità e personalizzazione di Experience Hub {#exp-hub-extensibility}
-
-[Experience Hub](/help/experience-hub.md) funge da punto di ingresso ad AEM, personalizzato in base alle esigenze della tua organizzazione. Comunica ad Adobe le tue estensioni dell’interfaccia utente di AEM esistenti in modo che possano aiutarti ad abilitarle in Experience Hub con il minimo sforzo.
-
-![Diagramma del flusso di lavoro di estensibilità e personalizzazione di Experience Hub](/help/implementing/cloud-manager/release-notes/assets/experience-hub-extensibility-customization.png)
-
-Incorpora esperienze personalizzate in Experience Hub per estendere e personalizzare il dashboard della tua organizzazione. Oltre ai widget incorporati di Adobe, aggiungi quelli personalizzati utilizzando il framework [UI Extensibility](https://developer.adobe.com/uix/docs/). Crea app dell’interfaccia utente basate su JavaScript e mostrale agli utenti per soddisfare requisiti e flussi di lavoro specifici per le aziende.
-
-Ti interessa la versione beta? Invia un&#39;e-mail a [beta_exphubextensibility@adobe.com](mailto:beta_exphubextensibility@adobe.com) con il tuo OrgID Adobe e una breve descrizione della personalizzazione che intendi creare.
-
-### Build più veloci con il caching dei moduli {#quick-build-cm-pipelines}
-
-Un nuovo modello di build compila solo i moduli modificati (anziché l’intero archivio) utilizzando la memorizzazione nella cache a livello di modulo per ridurre i tempi di build. Si applica alle pipeline di qualità del codice, full stack e solo stage.
-
-Interessato? Invia un&#39;e-mail a [beta_quickbuild_cmpipelines@adobe.com](mailto:beta_quickbuild_cmpipelines@adobe.com) con il tuo ID organizzazione e l&#39;ID programma di Adobe.
-
-<!-- You can deactivate incremental builds at the pipeline level by setting the property `CM_BUILD_DISABLE_MODULE_CACHING` to `true` (effective during the `BUILD` step). For how to add pipeline variables, see [Pipeline Variables in Cloud Manager](/help/implementing/cloud-manager/configuring-pipelines/pipeline-variables.md).-->
-
-
 
 ### Rollback con un solo clic per le implementazioni di pipeline {#one-click-rollback}
 
@@ -188,10 +134,34 @@ Consulta [Gestisci token di accesso](/help/implementing/cloud-manager/managing-c
 
 <!-- If you are interested in testing this new feature and sharing your feedback, send an email to [Grp-CloudManager_BYOG@adobe.com](mailto:grp-cloudmanager_byog@adobe.com) from your email address associated with your Adobe ID. -->
 
+### Aggiungere una pipeline di configurazione Edge Delivery {#add-eds-pipeline}
+
+Le pipeline di configurazione sono ora supportate per i siti creati con Edge Delivery Services, espandendo questa funzionalità oltre i singoli ambienti di Cloud Service. È possibile utilizzare le **pipeline di configurazione** per gestire impostazioni quali le regole di filtro del traffico e le configurazioni del firewall per applicazioni web (WAF), se applicabile. Consulta le [configurazioni supportate](/help/operations/config-pipeline.md#configurations).
+
+**Miglioramento recente**
+
+* Le pipeline di configurazione Edge Delivery ora supportano i segreti tramite le variabili della pipeline Cloud Manager.
+* Le pipeline di Edge Delivery Services ora visualizzano **Configurazione** nella colonna **Codice distribuito**, consentendo l’identificazione immediata delle distribuzioni di sola configurazione. <!-- CMGR‑69681 -->
+* Cloud Manager mostra **Aggiungi pipeline Edge Delivery** quando un programma contiene almeno un sito Edge Delivery Services e un dominio mappato. In caso contrario, l’opzione risulta disabilitata e una descrizione comando spiega i requisiti mancanti. <!-- CMGR‑69680 -->
+* Nella scheda **Edge Delivery** è visualizzato un nuovo widget **Pipeline Edge Delivery** in cui sono elencati il nome, lo stato, l’archivio e il ramo di ogni pipeline. <!-- (CMGR-69052) -->
+
+  ![Widget pipeline Edge Delivery con nome pipeline, stato, repository e ramo](/help/implementing/cloud-manager/release-notes/assets/edge-delivery-pipeline-widget.png)
+
+* Il pannello **Filtri** aggiunge una sezione **Tipo di consegna**; include le caselle di controllo **Edge Delivery** e **Pubblica consegna**. <!-- (CMGR-69682) -->
+
+  ![Pannello dei filtri che mostra il nuovo tipo di distribuzione Edge Delivery e Pubblica consegna](/help/implementing/cloud-manager/release-notes/assets/filter-delivery-type.png)
+
+![Aggiungi pipeline Edge Delivery nell’elenco a discesa Aggiungi pipeline](/help/implementing/cloud-manager/release-notes/assets/edge-delivery-pipeline-add.png) *Aggiunta di una pipeline Edge Delivery dalla pagina **Panoramica del programma**, scheda **Pipeline**.*
+
+![Finestra di dialogo Aggiungi pipeline di Edge Delivery](/help/implementing/cloud-manager/release-notes/assets/edge-delivery-pipeline-add-dialogbox.png) *Finestra di dialogo Aggiungi pipeline di Edge Delivery.*
+
+Consultare [Aggiungere pipeline Edge Delivery](/help/implementing/cloud-manager/configuring-pipelines/configuring-edge-delivery-pipeline.md)
+
+Se ti interessa testare questa nuova funzione e condividere il tuo feedback, invia un’e-mail a [grp-aemeds-config-pipeline-adopter@adobe.com](mailto:grp-aemeds-config-pipeline-adopter@adobe.com) dall’indirizzo e-mail associato al tuo Adobe ID.
 
 ## Correzioni di bug {#bug-fixes}
 
-Non vi sono correzioni di bug significativi nella versione di ottobre di Cloud Manager.
+Non sono state apportate correzioni di bug significative nella versione di settembre di Cloud Manager.
 
 
 <!-- ## Known issues {#known-issues} -->
