--- a/help/implementing/cloud-manager/release-notes/2023/2023-8-0.md
+++ b/help/implementing/cloud-manager/release-notes/2023/2023-8-0.md
@@ -4,7 +4,7 @@ description: Note sulla versione 2023.8.0 di Cloud Manager in AEM as a Cloud Ser
 feature: Release Information
 exl-id: d0b160ae-afc2-4158-a16a-6319ef2343e8
 role: Admin
-source-git-commit: 169de7971fba829b0d43e64d50a356439b6e57ca
+source-git-commit: 2aea79d42ef9627a8fc758077a7ee012592888d7
 workflow-type: tm+mt
 source-wordcount: '535'
 ht-degree: 62%
@@ -28,7 +28,7 @@ La data di pubblicazione di Cloud Manager versione 2023.8.0 in AEM as a Cloud Se
 * Durante la configurazione di un set di contenuti su [copia contenuto](/help/implementing/developing/tools/content-copy.md), sono ora consentite [configurazioni in base al contesto](/help/implementing/developing/introduction/configurations.md) nei set di contenuti nell&#39;interfaccia utente.
 * Sono stati apportati cambiamenti per migliorare la comprensibilità e la visualizzazione dei messaggi di errore nell’interfaccia utente di Cloud Manager.
 
-## Programma beta privato {#private-beta-program}
+## Programma Beta privato {#private-beta-program}
 
 Partecipa al programma beta privato di Adobe e hai la possibilità di testare alcune delle prossime funzionalità.
 
@@ -39,15 +39,15 @@ Partecipa al programma beta privato di Adobe e hai la possibilità di testare al
 * Ripristino del backup in un momento specifico per le 24 ore precedenti
 * Ripristini a tempo fisso per un massimo di sette giorni
 
-Se ti interessa testare questa nuova funzionalità e condividere i tuoi commenti, invia un’e-mail a `aemcs-restorefrombackup-adopter@adobe.com` dall’e-mail associata al tuo Adobe ID.
+Se ti interessa testare questa nuova funzionalità e condividere un tuo feedback, invia un’e-mail a `aemcs-restorefrombackup-adopter@adobe.com` dall’e-mail associata al tuo Adobe ID.
 
 * Il programma beta privato è limitato solo agli ambienti di sviluppo.
 * La disponibilità del programma beta privato di questa funzione è limitata.
 * Questa funzione consente di ripristinare i contenuti eliminati accidentalmente e non è destinata al ripristino di emergenza.
 
-### Dashboard di Experience Audit {#experience-audit-dashboard}
+### Dashboard di audit dell’esperienza {#experience-audit-dashboard}
 
-La [dashboard di Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/experience-audit-dashboard.md) include una vista dei trend dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
+La [dashboard Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/reports/report-experience-audit.md) include una vista con le tendenze dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
 
 La dashboard sfrutta Google Lighthouse, uno strumento open-source automatizzato per migliorare la qualità delle app web. Puoi eseguirla su qualsiasi pagina web pubblica o che richiede l’autenticazione. Sono disponibili audit di prestazioni, accessibilità, applicazioni web progressive, SEO e altro ancora.
 
