--- a/help/implementing/cloud-manager/release-notes/2023/2023-9-0.md
+++ b/help/implementing/cloud-manager/release-notes/2023/2023-9-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione 2023.9.0 di Cloud Manager in AEM as a Cloud Ser
 feature: Release Information
 exl-id: 5a735fe1-70e0-4413-8027-0c81acbb944e
 role: Admin
-source-git-commit: 169de7971fba829b0d43e64d50a356439b6e57ca
+source-git-commit: 5f9d53958076b77cd333a042003c83853594db87
 workflow-type: tm+mt
 source-wordcount: '437'
-ht-degree: 62%
+ht-degree: 63%
 
 ---
 
@@ -28,7 +28,7 @@ La data di pubblicazione di Cloud Manager versione 2023.9.0 in AEM as a Cloud Se
 * I registri CDN, se disponibili, possono essere scaricati tramite l’interfaccia utente di Cloud Manager.
 * Gli utenti possono ora dare il consenso per includere i test di audit dell’esperienza basati su Google Lighthouse in pipeline non di produzione full stack.
 
-## Programma beta privato {#private-beta-program}
+## Programma Beta privato {#private-beta-program}
 
 Per testare alcune delle prossime funzionalità, partecipa al programma beta privato di Adobe.
 
@@ -39,15 +39,15 @@ Per testare alcune delle prossime funzionalità, partecipa al programma beta pri
 * Ripristino del backup in un momento specifico per le 24 ore precedenti
 * Ripristini a tempo fisso per un massimo di sette giorni
 
-Se ti interessa testare questa nuova funzionalità e condividere i tuoi commenti, invia un’e-mail a `aemcs-restorefrombackup-adopter@adobe.com` dall’e-mail associata al tuo Adobe ID.
+Se ti interessa testare questa nuova funzionalità e condividere un tuo feedback, invia un’e-mail a `aemcs-restorefrombackup-adopter@adobe.com` dall’e-mail associata al tuo Adobe ID.
 
 * Il programma beta privato è limitato solo agli ambienti di sviluppo.
 * La disponibilità del programma beta privato di questa funzione è limitata.
 * Questa funzione consente di ripristinare i contenuti eliminati accidentalmente e non è destinata al ripristino di emergenza.
 
-### Dashboard di Experience Audit {#experience-audit-dashboard}
+### Dashboard di audit dell’esperienza {#experience-audit-dashboard}
 
-La [dashboard di Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/experience-audit-dashboard.md) include una vista dei trend dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
+La [dashboard Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/reports/report-experience-audit.md) include una vista con le tendenze dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
 
 La dashboard sfrutta Google Lighthouse, uno strumento open-source automatizzato per migliorare la qualità delle app web. Puoi eseguirla su qualsiasi pagina web pubblica o che richiede l’autenticazione. Sono disponibili audit di prestazioni, accessibilità, applicazioni web progressive, SEO e altro ancora.
 
@@ -57,5 +57,5 @@ Ti interessa testare la nuova dashboard? Inizia inviando un&#39;e-mail a `aem-li
 
 * Quando un programma viene eliminato, viene eliminata anche qualsiasi pipeline in esecuzione associata.
 * Se è in corso una pipeline, il pulsante **Invia** della finestra di dialogo **Lancio completato** è disabilitato e informa l&#39;utente che non è possibile impostare la data di lancio a causa della pipeline in esecuzione.
-* È stato corretto un errore occasionale in cui tutti i passaggi di un’esecuzione della pipeline venivano contrassegnati come completati. Tuttavia, lo stato della pipeline era ancora in esecuzione, dando l’aspetto di uno stato bloccato.
+* Ora viene corretto un errore occasionale in cui tutti i passaggi di un’esecuzione della pipeline sono contrassegnati come completati. Tuttavia, lo stato della pipeline era ancora in esecuzione, dando l’aspetto di uno stato bloccato.
 
