--- a/help/implementing/cloud-manager/release-notes/2024/2024-3-0.md
+++ b/help/implementing/cloud-manager/release-notes/2024/2024-3-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione 2024.3.0 di Cloud Manager in AEM as a Cloud Ser
 feature: Release Information
 exl-id: 6b4b450c-05b1-4401-a015-01bfed87d53a
 role: Admin
-source-git-commit: 169de7971fba829b0d43e64d50a356439b6e57ca
+source-git-commit: 2aea79d42ef9627a8fc758077a7ee012592888d7
 workflow-type: tm+mt
 source-wordcount: '628'
-ht-degree: 64%
+ht-degree: 65%
 
 ---
 
@@ -28,7 +28,7 @@ La data di pubblicazione di Cloud Manager versione 2024.3.0 in AEM as a Cloud Se
 * [È ora possibile creare un&#39;infrastruttura di rete avanzata](/help/security/configuring-advanced-networking.md) nel programma Cloud Manager e configurare gli ambienti in modo autonomo tramite l&#39;interfaccia utente di Cloud Manager.
 * [I dettagli del passaggio di esecuzione della pipeline](/help/implementing/cloud-manager/configuring-pipelines/managing-pipelines.md#view-details) includono il passaggio corrente della distribuzione e ciò che deve essere seguito.
 
-## Programma beta privato {#private-beta-program}
+## Programma Beta privato {#private-beta-program}
 
 Per testare alcune delle prossime funzionalità, partecipa al programma beta privato di Adobe.
 
@@ -53,15 +53,15 @@ Se ti interessa testare questa nuova funzionalità e condividere il tuo feedback
 * Ripristino del backup in un momento specifico per le 24 ore precedenti
 * Ripristini a tempo fisso per un massimo di sette giorni
 
-Se ti interessa testare questa nuova funzionalità e condividere i tuoi commenti, invia un’e-mail a `aemcs-restorefrombackup-adopter@adobe.com` dall’e-mail associata al tuo Adobe ID.
+Se ti interessa testare questa nuova funzionalità e condividere un tuo feedback, invia un’e-mail a `aemcs-restorefrombackup-adopter@adobe.com` dall’e-mail associata al tuo Adobe ID.
 
 * Il programma beta privato è limitato solo agli ambienti di sviluppo.
 * La disponibilità del programma beta privato di questa funzione è limitata.
 * Questa funzione consente di ripristinare i contenuti eliminati accidentalmente e non è destinata al ripristino di emergenza.
 
-### Dashboard di Experience Audit {#experience-audit-dashboard}
+### Dashboard di audit dell’esperienza {#experience-audit-dashboard}
 
-La [dashboard di Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/experience-audit-dashboard.md) include una vista dei trend dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
+La [dashboard Audit dell’esperienza di Cloud Manager](/help/implementing/cloud-manager/reports/report-experience-audit.md) include una vista con le tendenze dei punteggi delle prestazioni della pagina, oltre a insight e consigli per aiutarti a migliorarli. La funzione Audit dell’esperienza è inclusa come passaggio nella pipeline di produzione di Cloud Manager.
 
 La dashboard sfrutta Google Lighthouse, uno strumento open-source automatizzato per migliorare la qualità delle app web. Puoi eseguirla su qualsiasi pagina web pubblica o che richiede l’autenticazione. Sono disponibili audit di prestazioni, accessibilità, applicazioni web progressive, SEO e altro ancora.
 
