--- a/help/release-notes/universal-editor/2025/2025-09-11.md
+++ b/help/release-notes/universal-editor/2025/2025-09-11.md
@@ -3,10 +3,10 @@ title: Note sulla versione 2025.09.11 dell’editor universale
 description: Queste sono le note sulla versione 2025.09.11 dell’editor universale.
 feature: Release Information
 role: Admin
-source-git-commit: 7d930bfa070bd7ea2e519844b618585c7680c13e
+source-git-commit: b30367d3892fb58d42533864ba9c354e355c7d7a
 workflow-type: tm+mt
-source-wordcount: '220'
-ht-degree: 100%
+source-wordcount: '215'
+ht-degree: 86%
 
 ---
 
@@ -21,7 +21,9 @@ Queste sono le note sulla versione dell’11 settembre 2025 dell’editor univer
 
 ## Novità {#what-is-new}
 
-* [Copia e incolla](/help/sites-cloud/authoring/universal-editor/authoring.md#copy-paste) è ora disponibile per i componenti all’interno dei contenitori sulla stessa pagina.
+* [Copia e incolla](/help/sites-cloud/authoring/universal-editor/authoring.md#copy-paste) è ora disponibile per i componenti all&#39;interno dei contenitori.
+   * Copia e incolla deve trovarsi nella stessa scheda del browser.
+   * Il contenitore di destinazione non può avere [filtri impostati.](/help/implementing/universal-editor/filtering.md)
 * 6.5 LTS SP1 è ora supportato.
 * L’editor universale ora supporta [l’ereditarietà della gestione multisito](/help/sites-cloud/authoring/universal-editor/inheritance.md) per i frammenti di contenuto, inclusa l’interruzione automatica dell’ereditarietà quando viene modificato un frammento di contenuto Live Copy.
 
@@ -32,10 +34,6 @@ Se ti interessa testare queste nuove funzioni e condividere un feedback, invia u
 ### Nuovo editor Rich Text {#new-rte}
 
 Il nuovo editor Rich Text ProseMirror, con un selettore di pagina nella finestra di dialogo del collegamento, è ora disponibile nel pannello di destra.
-
-### Copia e incolla tra le pagine {#copy-paste}
-
-È ora possibile copiare e incollare su più pagine oltre che all’interno della stessa pagina.
 
 ## Altri miglioramenti {#other-improvements}
 
