Updated by task 'AUTO_TM_MT_1760033482687' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/b93c65612c0bddad3ff109bb663fc48a6277b43f

--- a/help/release-notes/universal-editor/2025/2025-10-02.md
+++ b/help/release-notes/universal-editor/2025/2025-10-02.md
@@ -1,20 +1,19 @@
 ---
-title: Note sulla versione 2025.10.09 dell’editor universale
-description: Queste sono le note sulla versione 2025.10.09 dell’editor universale.
+title: Note sulla versione 2025.10.02 dell’editor universale
+description: Queste sono le note sulla versione 2025.10.02 dell’editor universale.
 feature: Release Information
 role: Admin
-exl-id: d16ed78d-d5a3-45bf-a415-5951e60b53f9
-source-git-commit: e07509ca667b674fb56880a9f3d37976de029782
+source-git-commit: b00d9c986a40f09484ad8037609e96e86647548c
 workflow-type: tm+mt
-source-wordcount: '206'
-ht-degree: 40%
+source-wordcount: '209'
+ht-degree: 49%
 
 ---
 
 
-# Note sulla versione 2025.10.09 dell’editor universale {#release-notes}
+# Note sulla versione 2025.10.02 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 9 ottobre 2025 di Universal Editor.
+Queste sono le note sulla versione del 2 ottobre 2025 di Universal Editor.
 
 >[!TIP]
 >
@@ -26,7 +25,7 @@ Queste sono le note sulla versione del 9 ottobre 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* [È ora possibile copiare e incollare i componenti](/help/sites-cloud/authoring/universal-editor/authoring.md#copy-paste) tra contenitori con filtri configurati.
+* [È stata aggiunta un&#39;opzione](/help/sites-cloud/authoring/universal-editor/navigation.md#user-properties) al menu **Account** nella barra degli strumenti dell&#39;intestazione di Experience Manager per passare dalla versione di produzione corrente di Universal Editor alla versione di anteprima in arrivo.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -36,9 +35,10 @@ Se ti interessa testare queste nuove funzioni e condividere un feedback, invia u
 
 Il nuovo editor Rich Text ProseMirror, con un selettore di pagina nella finestra di dialogo del collegamento, è ora disponibile nel pannello di destra. [Questo editor Rich Text offre opzioni di configurazione flessibili.](/help/implementing/universal-editor/configure-rte.md)
 
+### Copia e incolla tra le pagine {#copy-paste}
+
+È ora possibile copiare e incollare su più pagine oltre che all’interno della stessa pagina.
+
 ## Altri miglioramenti {#other-improvements}
 
-* È stato risolto un problema che impediva agli utenti di riselezionare un frammento di esperienza
-* L’eliminazione di un componente o di un blocco in una Live Copy non annulla più l’ereditarietà principale.
-* La modifica delle proprietà di pagina tramite i metadati della pagina nelle Live Copy non annulla più l’ereditarietà dell’intera pagina.
-* È stata risolta una regressione minore con tasti di scelta rapida.
+* La barra della posizione e il relativo testo sono stati allineati meglio nell’interfaccia utente.
