--- a/help/release-notes/universal-editor/2025/2025-08-22.md
+++ b/help/release-notes/universal-editor/2025/2025-08-22.md
@@ -4,16 +4,16 @@ description: Queste sono le note sulla versione 2025.08.22 dell’editor univers
 feature: Release Information
 role: Admin
 source-git-commit: bd0836a68ddbce9fc8c0f5dc06f64f96f9293952
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '241'
-ht-degree: 71%
+ht-degree: 100%
 
 ---
 
 
 # Note sulla versione 2025.08.22 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 22 agosto 2025 di Universal Editor.
+Queste sono le note sulla versione dell’editor universale del 22 agosto 2025.
 
 >[!TIP]
 >
@@ -21,9 +21,9 @@ Queste sono le note sulla versione del 22 agosto 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* Nuove funzionalità per [Utenti che utilizzano l&#39;editor Rich Text](#new-rte)
+* Nuova funzione per i [ primi utilizzatori dell’editor Rich Text](#new-rte)
    * Il titolo del collegamento è ora disponibile nella finestra di dialogo del collegamento.
-   * Scollegamento disponibile.
+   * Lo scollegamento è ora disponibile.
    * Le voci di elenco ora supportano la formattazione in linea e i collegamenti.
    * L’area con scorrimento è stata corretta.
 
@@ -44,7 +44,7 @@ La funzione Annulla e Ripeti è ora disponibile per gli autori di contenuti dell
 
 ## Altri miglioramenti {#other-improvements}
 
-* [La funzione Annulla/Ripristina prima dell&#39;adozione](#undo-redo) non attiva più il ricaricamento della pagina quando un componente viene aggiunto tramite un&#39;operazione Annulla o Ripristina.
+* [La funzione Annulla/Ripristina per i primi utilizzatori](#undo-redo) non attiva più il ricaricamento della pagina quando un componente viene aggiunto tramite un&#39;operazione di annullamento o ripristino.
 
 ## Rimozioni {#deprecations}
 
