--- a/help/release-notes/universal-editor/2025/2025-09-04.md
+++ b/help/release-notes/universal-editor/2025/2025-09-04.md
@@ -4,16 +4,16 @@ description: Queste sono le note sulla versione 2025.09.04 dell’editor univers
 feature: Release Information
 role: Admin
 source-git-commit: 8205014a07b3683d6dd55f1632f5ac06a62e2337
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '215'
-ht-degree: 52%
+ht-degree: 100%
 
 ---
 
 
 # Note sulla versione 2025.09.04 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 4 settembre 2025 di Universal Editor.
+Queste sono le note sulla versione del 4 settembre 2025 dell’editor universale.
 
 >[!TIP]
 >
@@ -21,10 +21,10 @@ Queste sono le note sulla versione del 4 settembre 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* Il comando Copia/Incolla è disponibile per [utenti che lo hanno adottato in anticipo](#copy-paste)
-* [Annulla e ripristina](/help/sites-cloud/authoring/universal-editor/authoring.md#undo-redo) è ora disponibile per gli autori di contenuto.
-   * Le operazioni Annulla e Ripeti possono essere eseguite per le modifiche apportate nel contesto, per le modifiche effettuate tramite il pannello Proprietà, nonché per aggiungere, duplicare, spostare ed eliminare blocchi.
-   * Le operazioni Annulla e Ripeti sono limitate alla sessione corrente del browser.
+* Il comando Copia/Incolla è disponibile per i [primi utilizzatori](#copy-paste)
+* [Annulla e ripristina](/help/sites-cloud/authoring/universal-editor/authoring.md#undo-redo) è ora disponibile per gli autori di contenuti.
+   * Annullamento e ripristino possono essere eseguiti per modifiche apportate nel contesto, effettuate tramite il pannello Proprietà, nonché aggiunta, duplicazione, spostamento ed eliminazione di blocchi.
+   * Le operazioni Annulla e Ripristina sono limitate alla sessione corrente del browser.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
