--- a/help/implementing/cloud-manager/release-notes/2020/2020-12-0.md
+++ b/help/implementing/cloud-manager/release-notes/2020/2020-12-0.md
@@ -25,7 +25,7 @@ La data di rilascio per Cloud Manager in AEM as a Cloud Service 2020.12.0 è il 
 
 * Gestione in autonomia di [certificati SSL](/help/implementing/cloud-manager/managing-ssl-certifications/introduction-to-ssl-certificates.md) e dei [nomi di dominio personalizzati](/help/implementing/cloud-manager/custom-domain-names/introduction.md).
 
-* Gestione in autonomia di [elenchi IP consentiti ](/help/implementing/cloud-manager/ip-allow-lists/introduction.md).
+* Gestione in autonomia di [elenchi IP consentiti &#x200B;](/help/implementing/cloud-manager/ip-allow-lists/introduction.md).
 
 * La pagina dei dettagli **Ambiente** aggiornata ora consente agli utenti di gestire i nomi di dominio personalizzati e gli Elenchi consentiti IP nei loro ambienti.
 
