Updated by task 'AUTO_TM_MT_1760630184193' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/efeeb2417f8d9b42a541273400fc0d56c499c824

--- a/help/release-notes/universal-editor/2025/2025-10-09.md
+++ b/help/release-notes/universal-editor/2025/2025-10-09.md
@@ -1,20 +1,19 @@
 ---
-title: Note sulla versione 2025.10.16 dell’editor universale
-description: Queste sono le note sulla versione 2025.10.16 dell’editor universale.
+title: Note sulla versione 2025.10.09 dell’editor universale
+description: Queste sono le note sulla versione 2025.10.09 dell’editor universale.
 feature: Release Information
 role: Admin
-exl-id: d16ed78d-d5a3-45bf-a415-5951e60b53f9
 source-git-commit: 31c94576f6cfb0ffff0f37ece33ef1f91f98f356
 workflow-type: tm+mt
-source-wordcount: '166'
-ht-degree: 50%
+source-wordcount: '206'
+ht-degree: 40%
 
 ---
 
 
-# Note sulla versione 2025.10.16 dell’editor universale {#release-notes}
+# Note sulla versione 2025.10.09 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 16 ottobre 2025 di Universal Editor.
+Queste sono le note sulla versione del 9 ottobre 2025 di Universal Editor.
 
 >[!TIP]
 >
@@ -26,7 +25,7 @@ Queste sono le note sulla versione del 16 ottobre 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* È stato introdotto il supporto di più campi per gli aggiornamenti.
+* [È ora possibile copiare e incollare i componenti](/help/sites-cloud/authoring/universal-editor/authoring.md#copy-paste) tra contenitori con filtri configurati.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -38,5 +37,7 @@ Il nuovo editor Rich Text ProseMirror, con un selettore di pagina nella finestra
 
 ## Altri miglioramenti {#other-improvements}
 
-* L&#39;host in `AemContentFragmentReference` è ora bonificato.
-* È stata aggiunta la logica per le configurazioni del dispatcher SSL e non SSL.
+* È stato risolto un problema che impediva agli utenti di riselezionare un frammento di esperienza
+* L’eliminazione di un componente o di un blocco in una Live Copy non annulla più l’ereditarietà principale.
+* La modifica delle proprietà di pagina tramite i metadati della pagina nelle Live Copy non annulla più l’ereditarietà dell’intera pagina.
+* È stata risolta una regressione minore con tasti di scelta rapida.
