Updated by task 'AUTO_TM_MT_1761208999620' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/35413fbf6e9bfaa08073407bc65e0ccd9dd9439a

--- a/help/release-notes/universal-editor/2025/2025-10-16.md
+++ b/help/release-notes/universal-editor/2025/2025-10-16.md
@@ -1,20 +1,19 @@
 ---
-title: Note sulla versione 2025.10.23 dell’editor universale
-description: Queste sono le note sulla versione 2025.10.23 dell’editor universale.
+title: Note sulla versione 2025.10.16 dell’editor universale
+description: Queste sono le note sulla versione 2025.10.16 dell’editor universale.
 feature: Release Information
 role: Admin
-exl-id: d16ed78d-d5a3-45bf-a415-5951e60b53f9
-source-git-commit: fd80b6b0a3c6d06f8dddaa8387dbae6c33f96038
+source-git-commit: 98218684e27e3112007cf3fe646b252b36b1b7e3
 workflow-type: tm+mt
-source-wordcount: '205'
-ht-degree: 63%
+source-wordcount: '166'
+ht-degree: 78%
 
 ---
 
 
-# Note sulla versione 2025.10.23 dell’editor universale {#release-notes}
+# Note sulla versione 2025.10.16 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 23 ottobre 2025 di Universal Editor.
+Queste sono le note sulla versione del 16 ottobre 2025 di Universal Editor.
 
 >[!TIP]
 >
@@ -26,10 +25,7 @@ Queste sono le note sulla versione del 23 ottobre 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* [È ora possibile copiare e incollare](/help/sites-cloud/authoring/universal-editor/authoring.md#copy-paste) in più schede del browser.
-   * Limitato a tra schede aperte contemporaneamente.
-   * La copia del contenuto e l’apertura di una nuova scheda non sono supportate.
-* È ora possibile disattivare il pulsante Annulla pubblicazione con un tag [meta.](/help/implementing/universal-editor/customizing.md#meta-tags)
+* È stato introdotto il supporto di più campi per gli aggiornamenti.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -41,6 +37,5 @@ Il nuovo editor Rich Text ProseMirror, con un selettore di pagina nella finestra
 
 ## Altri miglioramenti {#other-improvements}
 
-* L’albero della struttura è stato migliorato.
-* Le immagini collegate sono ora supportate.
-* Sono stati apportati miglioramenti alle operazioni Annulla/Ripristina.
+* L&#39;host in `AemContentFragmentReference` è ora bonificato.
+* È stata aggiunta la logica per le configurazioni del dispatcher SSL e non SSL.
